zig_compat_output.txt
rust-compat-test
+- run rust-compat-test
   +- zig build-exe rust-compat-test Debug native 1 errors
/Users/partha/.local/share/zigup/0.14.1/files/lib/std/fmt.zig:653:21: error: cannot format slice without a specifier (i.e. {s} or {any})
                    @compileError("cannot format slice without a specifier (i.e. {s} or {any})");
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    format__anon_37612: /Users/partha/.local/share/zigup/0.14.1/files/lib/std/fmt.zig:193:23
    print__anon_34224: /Users/partha/.local/share/zigup/0.14.1/files/lib/std/io/Writer.zig:24:26
    6 reference(s) hidden; use '-freference-trace=8' to see all references
error: the following command failed with 1 compilation errors:
/Users/partha/.local/share/zigup/0.14.1/files/zig build-exe -ODebug --dep hash-zig -Mroot=/Users/partha/zig/hash-zig/examples/rust_compat_test.zig -ODebug --dep poseidon -Mhash-zig=/Users/partha/zig/hash-zig/src/root.zig -ODebug -Mposeidon=/Users/partha/.cache/zig/p/zig_poseidon-0.2.0-CHeW2H-SAAC83l4JGZOODgmgfEFpBa_KokE9oO3ilcf1/src/root.zig --cache-dir /Users/partha/zig/hash-zig/.zig-cache --global-cache-dir /Users/partha/.cache/zig --name rust-compat-test --zig-lib-dir /Users/partha/.local/share/zigup/0.14.1/files/lib/ --listen=- 
Build Summary: 0/3 steps succeeded; 1 failed
rust-compat-test transitive failure
+- run rust-compat-test transitive failure
   +- zig build-exe rust-compat-test Debug native 1 errors
error: the following build command failed with exit code 1:
/Users/partha/zig/hash-zig/.zig-cache/o/cc530210f05493ac7a6321fa4ca9c15f/build /Users/partha/.local/share/zigup/0.14.1/files/zig /Users/partha/.local/share/zigup/0.14.1/files/lib /Users/partha/zig/hash-zig /Users/partha/zig/hash-zig/.zig-cache /Users/partha/.cache/zig --seed 0x37dfad15 -Zee7348826f24a41a rust-compat-test
